# CmlLib.Core-wiki

./: CMLauncher.md  Common-Errors.md  Common-Erros.md  Dependency.md  Downloader.md  Errors-in-Crossplatform.md  FAQ.md  Fabric-Installer.md  FileChecker.md  Forge-Installer.md  Get-Minecraft-Changelogs.md  Handling-Events.md  Home.md  Installer.md  Licenses-and-Dependencies.md  Licesnse-and-Dependency.md  LiteLoader-Installer.md  Login-and-Session.md  Login-and-Sessions.md  MLaunchOption.md  Microsoft-Xbox-Live-Login.md  MinecraftPath.md  README.md  SUMMARY.md  Sample-Code.md  Version.md  _Sidebar.md  build.sh  llm-checklist.txt  llm.txt  mkdocs.base.yml  mkdocs.en.yml  mkdocs.ko.yml  pyproject.toml  requirements.txt  serve.sh
.github/: deploy.yml
.github/workflows/: deploy.yml
cmllib.core/: home.md
cmllib.core.auth.microsoft/: cmllib.core.bedrock.auth.md
cmllib.core.auth.microsoft/cmllib.core.auth.microsoft/: jeauthenticator.md  jeloginhandler.md  jeloginhandlerbuilder.md
cmllib.core.auth.microsoft/xboxauthnet.game/: README.md  xboxauthexception.md
cmllib.core.auth.microsoft/xboxauthnet.game.msal/: msalclienthelper.md  oauth.md
en/: INSTRUCTIONS.md  README (1).md  README.md  SUMMARY.md
en/auth.microsoft/: README.md  (+2 more)
ko/: CMLauncher.md  Downloader.md  FAQ.md  Fabric-Installer.md  Forge-Installer.md  Get-Minecraft-Changelogs.md  Handling-Events.md  Home.md  Installer.md  Licenses-and-Dependencies.md  LiteLoader-Installer.md  Login-and-Sessions.md  MLaunchOption.md  MinecraftPath.md  README.md  SUMMARY.md  Sample-Code.md  Version.md  VersionLoader.md  ad.md
(+187 files in other folders)
