[project]
name = "cmllib-core-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel==2.17.0",
    "backrefs==5.9",
    "beautifulsoup4==4.13.4",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "csscompressor==0.9.5",
    "editorconfig==0.17.1",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "htmlmin2==0.1.13",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsbeautifier==1.15.4",
    "jsmin==3.0.1",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-git-authors-plugin==0.10.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material==9.6.17",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-mermaid2-plugin==1.2.1",
    "mkdocs-minify-plugin==0.8.0",
    "packaging==25.0",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==1.1",
    "requests==2.32.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.7",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
]
